--- a/contact.html
+++ b/contact.html
@@ -46,73 +46,104 @@
     </nav>
 
     <main>
-        <section class="hero-2">
-            <div class="row m-5 align-items-center d-flex justify-content-center">
-                <div class="col-lg-6 col-md-8 col-sm-10 col-12">
-                    <div class="card m-4 " style="width: 30rem;">
-                        <div class="m-5">
-                            <h1 class="text-center">Contact Details</h1>
-                            <div>
-                                <div class="form-check m-2 ">
-                                    <label for="">Email</label><br>
-                                    <a href="" class="text-decoration-none">bpasindu135@gmail.com</a>
-                                </div>
-                                <div class="form-check m-2">
-                                    <label for="">Phone</label><br>
-                                    <a href="tel:+94786197209" class="text-decoration-none">+94786197209</a>
-                                </div>
-                                <div class="form-check m-2">
-                                    <label for="">Locaion</label><br>
-                                    <a href="" class="text-decoration-none">Sooriyawewa, Sri Lanka</a>
-                                </div>
-                                <div class="form-check m-2">
-                                    <label for="">WhatsApp</label><br>
-                                    <a href="tel:+94786197209" class="text-decoration-none">+94786197209</a>
-                                </div>
-                            </div>
-                            <div class="d-flex justify-content-cente">
-                                <ul class="list-inline social-icons">
-                                <li class="list-inline-item footerIcon"><a href="#" class="m-4"><i
-                                            class="bi bi-facebook"></i></a>
-                                </li>
-                                <li class="list-inline-item footerIcon"><a href="#" class="text-success m-4"><i
-                                            class="bi bi-whatsapp"></i></a>
-                                </li>
-                                <li class="list-inline-item footerIcon"><a href="#" class="text-black m-4"><i
-                                            class="bi bi-geo-alt-fill"></i></a>
-                                </li>
-                                <li class="list-inline-item footerIcon"><a href="#" class="text-black m-4"><i
-                                            class="bi bi-tiktok"></i></a>
-                                </li>
-                            </ul>
+        <div class="contact3 py-5 m-5">
+            <div class="row no-gutters">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="card-shadow">
+                                <img src="https://i.ytimg.com/vi/yZLmiw3tHlc/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDpiH7QO_Nd-QUBThtfQ6kvy1D7pA"
+                                    class="img-fluid">
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-8 col-sm-10 col-12">
-                    <div class="card m-4" style="width: 30rem;">
-                        <div class="text-black m-5">
-                            <h1 class="text-center">Send Message</h1>
-                            <div class="m-1">
-                                <label for="">Name</label><br>
-                                <input type="text" class="form-control">
+                        <div class="col-lg-6">
+                            <div class="contact-box ml-3">
+                                <h1 class="font-weight-light mt-2">Quick Contact</h1>
+                                <form class="mt-4">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="form-group mt-2">
+                                                <input class="form-control" type="text" placeholder="name">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="form-group mt-2">
+                                                <input class="form-control" type="email" placeholder="email address">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="form-group mt-2">
+                                                <input class="form-control" type="text" placeholder="phone">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="form-group mt-2">
+                                                <textarea class="form-control" rows="3"
+                                                    placeholder="message"></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <button type="submit"
+                                                class="btn btn-danger-gradiant mt-3 text-white border-0 px-3 py-2"><span>
+                                                    SUBMIT</span></button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="m-1">
-                                <label for="">Email</label><br>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="m-1">
-                                <label for="">Message</label><br>
-                                <textarea name="" id="" class="form-control"></textarea>
-                            </div>
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-primary rounded-5 w-25">Send</button>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="card mt-4 border-0 mb-4">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-4">
+                                        <div class="card-body d-flex align-items-center c-detail pl-0">
+                                            <div class="mr-3 align-self-center">
+                                                <img
+                                                    src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/icon1.png">
+                                            </div>
+                                            <div class="">
+                                                <h6 class="font-weight-medium">Address</h6>
+                                                <p class="">601 Sherwood Ave.
+                                                    <br> San Bernandino
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-4">
+                                        <div class="card-body d-flex align-items-center c-detail">
+                                            <div class="mr-3 align-self-center">
+                                                <img
+                                                    src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/icon2.png">
+                                            </div>
+                                            <div class="">
+                                                <h6 class="font-weight-medium">Phone</h6>
+                                                <p class="">251 546 9442
+                                                    <br> 630 446 8851
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-4">
+                                        <div class="card-body d-flex align-items-center c-detail">
+                                            <div class="mr-3 align-self-center">
+                                                <img
+                                                    src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/contact/icon3.png">
+                                            </div>
+                                            <div class="">
+                                                <h6 class="font-weight-medium">Email</h6>
+                                                <p class="">
+                                                    info@wrappixel.com
+                                                    <br> 123@wrappixel.com
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
