--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </nav>
-    
+
 
     <section class="hero-1 d-flex align-items-center justify-content-center text-white">
         <div class="container text-center">
@@ -58,9 +58,9 @@
                                 <i class="fas fa-rocket me-2"></i>
                                 Order Now
                             </button></a>
-                        <button class="btn btn-outline-light btn-lg orderBtn">
-                            Learn More
-                        </button>
+                        <a href="contact.html"><button class="btn btn-outline-light btn-lg orderBtn">
+                                Learn More
+                            </button></a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
     </section>
 
     <div class="container py-5" id="product">
-        <h1 class="text-center mb-5 p-3 text-white">Burgers</h1>
+        <h1 class="text-center mb-5 p-3 text-black">Burgers</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
@@ -187,7 +187,7 @@
 
 
     <div class="container py-5">
-        <h1 class="text-center mb-5 text-white">Cool Drinks</h1>
+        <h1 class="text-center mb-5 text-black">Cool Drinks</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
                 <div class="card h-100">
@@ -324,7 +324,7 @@
     <a href="" onclick="deleteCart()"></a>
 
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
